--- a/.github/actions/backup-restore-test/action.yml
+++ b/.github/actions/backup-restore-test/action.yml
@@ -30,7 +30,11 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v3
-    #TODO(meain): Do we need cache here?
+
+    - name: Setup Golang with cache
+      uses: magnetikonline/action-golang-cache@v4
+      with:
+        go-version-file: src/go.mod
 
     - run: go build -o corso
       shell: bash
