--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -49,6 +49,10 @@ jobs:
       run:
         working-directory: ${{ env.WORKING_DIR }}
     steps:
+##########################################################################################################################################
+
+# setup
+
       - uses: actions/checkout@v3
 
       - name: Setup Golang with cache
@@ -61,6 +65,51 @@ jobs:
 
       - run: mkdir ${TEST_RESULT}
       - run: mkdir ${CORSO_LOG_DIR}
+
+##########################################################################################################################################
+
+# Pre-Run cleanup
+
+      # unlike CI tests, sanity tests are not expected to run concurrently.
+      # however, the sanity yaml concurrency is set to a maximum of 1 run, preferring
+      # the latest release.  If we wait to clean up the production til after the tests
+      # It would be possible to complete all the testing but cancel the run before
+      # cleanup occurs.  Setting the cleanup before the tests ensures we always begin
+      # with a clean slate, and cannot compound data production.
+      - name: Set purge boundary
+        if: always()
+        run: |
+          echo "NOW=$(date +"%Y-%m-%d_%H-%M-%S")" >> $GITHUB_ENV
+
+      - name: Purge CI-Produced Folders for Users
+        uses: ./.github/actions/purge-m365-data
+        with:
+          user: ${TEST_USER}
+          folder-prefix: ${RESTORE_DEST_PFX}
+          older-than: ${{ env.NOW }}
+          azure-client-id: ${AZURE_CLIENT_ID}
+          azure-client-secret: ${AZURE_CLIENT_SECRET}
+          azure-tenant-id: ${AZURE_TENANT_ID}
+          m365-admin-user: ${{ secrets.M365_TENANT_ADMIN_USER }}
+          m365-admin-password: ${{ secrets.M365_TENANT_ADMIN_PASSWORD }}
+
+      - name: Purge CI-Produced Folders for Sites
+        if: always()
+        uses: ./.github/actions/purge-m365-data
+        with:
+          site: ${TEST_SITE}
+          folder-prefix: ${RESTORE_DEST_PFX}
+          libraries: ${{ vars.CORSO_M365_TEST_SITE_LIBRARIES }} 
+          older-than: ${{ env.NOW }}
+          azure-client-id: ${AZURE_CLIENT_ID}
+          azure-client-secret: ${AZURE_CLIENT_SECRET}
+          azure-tenant-id: ${AZURE_TENANT_ID}
+          m365-admin-user: ${{ secrets.M365_TENANT_ADMIN_USER }}
+          m365-admin-password: ${{ secrets.M365_TENANT_ADMIN_PASSWORD }}
+
+##########################################################################################################################################
+
+# Repository commands
 
       - name: Version Test
         run: |
@@ -262,43 +311,6 @@ jobs:
           backup-args: '--site "${TEST_SITE}"'
           restore-args: '--folder ${RESTORE_DEST_PFX}${{ steps.new-data-creation-sharepoint.outputs.result }} --restore-permissions'
           test-folder: '${RESTORE_DEST_PFX}${{ steps.new-data-creation-sharepoint.outputs.result }}'
-
-##########################################################################################################################################
-
-# Post-Run cleanup
-
-      # unlike CI tests, sanity tests are not expected to run concurrently.
-      # we can purge all of the test-generated folders immediately after the run concludes.
-      - name: Set purge boundary
-        if: always()
-        run: |
-          echo "NOW=$(date +"%Y-%m-%d_%H-%M-%S")" >> $GITHUB_ENV
-
-      - name: Purge CI-Produced Folders for Users
-        uses: ./.github/actions/purge-m365-data
-        with:
-          user: ${TEST_USER}
-          folder-prefix: ${RESTORE_DEST_PFX}
-          older-than: ${{ env.NOW }}
-          azure-client-id: ${AZURE_CLIENT_ID}
-          azure-client-secret: ${AZURE_CLIENT_SECRET}
-          azure-tenant-id: ${AZURE_TENANT_ID}
-          m365-admin-user: ${{ secrets.M365_TENANT_ADMIN_USER }}
-          m365-admin-password: ${{ secrets.M365_TENANT_ADMIN_PASSWORD }}
-
-      - name: Purge CI-Produced Folders for Sites
-        if: always()
-        uses: ./.github/actions/purge-m365-data
-        with:
-          site: ${TEST_SITE}
-          folder-prefix: ${RESTORE_DEST_PFX}
-          libraries: ${{ vars.CORSO_M365_TEST_SITE_LIBRARIES }} 
-          older-than: ${{ env.NOW }}
-          azure-client-id: ${AZURE_CLIENT_ID}
-          azure-client-secret: ${AZURE_CLIENT_SECRET}
-          azure-tenant-id: ${AZURE_TENANT_ID}
-          m365-admin-user: ${{ secrets.M365_TENANT_ADMIN_USER }}
-          m365-admin-password: ${{ secrets.M365_TENANT_ADMIN_PASSWORD }}
 
 ##########################################################################################################################################
 
